# flickr-tools

./: .gitignore  Makefile  README.md  pyproject.toml
doc/: notes.md
flickr_tools/: flickr_download.py
